# collab-doc

./: Cargo.toml  package-lock.json  readme.md
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
client/src/components/: AppTopBar.tsx  DocsList.tsx  LeftSideBar.tsx  LoginForm.tsx  Navbar.tsx  SignupForm.tsx
client/src/pages/: EditorPage.tsx  LoginPages.tsx  ProfilePage.tsx  SignupPages.tsx  UserDocs.tsx
migrations/: 20250902131130_Doc_tables.sql  20250903095232_update_doc.sql  20250904115951_doc-collaborators-table.sql
server/: Cargo.toml  readme.md
server/migrations/: 20250827143227_create_users.sql  20250903123055_update_time_columns.sql
server/src/: collab.rs  db.rs  doc.rs  main.rs
server/src/auth/: handlers.rs  routes.rs
server/src/doc/: handlers.rs  models.rs  routes.rs  sessions.rs
src/: auth.rs  main.rs  models.rs  routes.rs
src/auth/: handlers.rs  models.rs  routes.rs
src/doc/: handlers.rs  models.rs  routes.rs
