[package]
name = "collab-doc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    
    "macros",          # compile-time checked queries
    "postgres",        # or "mysql", "sqlite", "mssql"
    "uuid",            # if you use UUIDs
    "chrono",           # if you use DateTime
    "runtime-tokio-rustls"
] }
dotenvy = "0.15"
env = "1.0.1"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde", "clock"] }
async-trait = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

